# MyWebServer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  start_server.sh
include/: BlockQueue.h  Buffer.h  Epoll.h  EventLoop.h  HttpRequest.h  HttpResponse.h  IoAwaitable.h  Log.h  Result.h  Scheduler.h  Socket.h  SqlConnPool.h  Timer.h  Utils.h  Worker.h
resources/: index.html
src/: Buffer.cpp  Epoll.cpp  EventLoop.cpp  HttpRequest.cpp  HttpResponse.cpp  Log.cpp  Socket.cpp  SqlConnPool.cpp  Timer.cpp  main.cpp
study/: client.cpp  server.cpp
